# wikidata-grep

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: .gitignore  README.md  config.sh  download-dataset.sh  quick-bench.sh
src/: build_graph.rs  cli.rs  format.rs  graph.rs  main.rs  parallel.rs  parse.rs  process.rs  progress.rs  runner.rs
src/filter/: claim.rs  mod.rs
tests/: cli.rs  fixtures.rs
tests/fixtures/: input-ext.ndjson  input.ndjson
tests/fixtures/expected/: claim-negated.ndjson  claim-presence.ndjson  default.ndjson  ext-deep-negated.ndjson  ext-deep.ndjson  ext-scoped-value.ndjson  keep-claims.ndjson  keep.ndjson  languages.ndjson  omit.ndjson  sitelink.ndjson  type-property.ndjson
