[package]
name = "wikidata-grep"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Filter and format a newline-delimited JSON stream of Wikibase entities (a Rust reimplementation of wikibase-dump-filter)"
license = "MIT"
repository = "https://github.com/togatoga/wikidata-grep"
homepage = "https://github.com/togatoga/wikidata-grep"
readme = "README.md"
keywords = ["wikidata", "wikibase", "dump", "filter", "ndjson"]
categories = ["command-line-utilities"]
exclude = ["benchmarks/", "tests/fixtures/"]

[[bin]]
name = "wdgrep"
path = "src/main.rs"

[dependencies]
ahash = "0.8.12"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
memchr = "2"
# Order-preserving serializer for the formatting path. sonic-rs is used for the
# (read-only, order-insensitive) parse/filter hot path, but since 0.4.0 its
# programmatically-built Objects are hash-ordered, which would scramble output
# key order. serde_json with `preserve_order` (IndexMap) keeps keys in input /
# requested order; `arbitrary_precision` round-trips numbers verbatim like
# sonic-rs's `use_rawnumber`. Slower than sonic, but only on kept+formatted lines.
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision"] }
sonic-rs = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
